Changed links in skeleton.html to adhere to new asset path

--- a/skeleton.html
+++ b/skeleton.html
@@ -3,7 +3,7 @@
     <head>
         <title>Blog Post</title>
         <link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-green.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/stylesheets/style.css">
     </head>
     <body>
         <header>
@@ -41,10 +41,10 @@
         </section>
         <aside>
             <section>
-                <img src="widget.png" height="20px">
+                <img src="assets/images/widget.png" height="20px">
             </section>
             <section>
-                <img src="widget.png" height="20px">
+                <img src="assets/images/widget.png" height="20px">
             </section>
         </aside>
         </body>
