made an external stylesheet.

--- a/skeleton.html
+++ b/skeleton.html
@@ -2,16 +2,20 @@
 <html>
     <head>
         <title>Blog Post</title>
-        <link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-green.css">
+        <!--<link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-green.css">-->
         <link rel="stylesheet" href="assets/stylesheets/style.css">
     </head>
     <body>
         <header>
-            <h1>My Blog Post</h1>
-            <h2>I built a web page!</h2>
-            <h3>July 27<sup>th</sup> 2015</h3>
-            <h4>Ian Horsman</h4>
-            <img src="http://placekitten.com/200/150">
+            <div>
+                <h1>My Blog Post</h1>
+                <h2>I built a web page!</h2>
+                <h3>July 27<sup>th</sup> 2015</h3>
+                <h4>Ian Horsman</h4>
+            </div>
+            <div>
+                <img src="http://placekitten.com/200/150">
+            </div>
         </header>
         <section>
             <article>
@@ -41,10 +45,10 @@
         </section>
         <aside>
             <section>
-                <img src="assets/images/widget.png" height="20px">
+                <img src="assets/images/widget.png">
             </section>
             <section>
-                <img src="assets/images/widget.png" height="20px">
+                <img src="assets/images/widget.png">
             </section>
         </aside>
         </body>
