some edits n stuff

--- a/skeleton.html
+++ b/skeleton.html
@@ -24,7 +24,7 @@
                 <strong><em>Lorem</em></strong> ipsum dolor sit amet, per tale viris singulis cu, mea movet probatus ex. Cu nam diam debet noluisse, eripuit maiorum petentium pri ut. Ne eum nisl ubique incorrupte. Sanctus persecuti disputationi id qui. Est cu clita soluta ignota, no vis autem facilis. Mei ne possit nusquam luptatum.
                 </p>
                 <p>
-                    <strong></em>Mundi</em></strong> everti mel ut. Quo at quod instructior voluptatibus. Magna probatus recteque his cu, at labitur molestiae vis, eam ea nostro aperiri appetere. Has omnesque adolescens neglegentur ea, reque paulo ea duo, usu te copiosae insolens praesent.
+                    <strong><em>Mundi</em></strong> everti mel ut. Quo at quod instructior voluptatibus. Magna probatus recteque his cu, at labitur molestiae vis, eam ea nostro aperiri appetere. Has omnesque adolescens neglegentur ea, reque paulo ea duo, usu te copiosae insolens praesent.
                 </p>
                 <p>
                     <strong><em>Vide</em></strong> alienum forensibus quo in, viderer saperet ex sed, cum in errem tollit. Usu veniam aliquip et, alienum legendos persequeris duo ut, per no mundi nostrud nominavi. At vix tale reque laudem, in elit principes incorrupte cum. Te quem sumo sanctus nam, sit iusto scripta dissentiet no.
