--- a/skeleton.html
+++ b/skeleton.html
@@ -45,10 +45,20 @@
         </section>
         <aside>
             <section>
-                <img src="assets/images/widget.png">
+                <h4>My Pet</h4>
+                <p>Budgie</p>
             </section>
             <section>
-                <img src="assets/images/widget.png">
+                <h4>My Favourite Colour</h4>
+                <p class="green">Green</p>
+            </section>
+            <section>
+                <h4>Bucket List</h4>
+                <ul>
+                    <li>Attempt MMA training.</li>
+                    <li>Go skydiving.</li>
+                    <li>Try MDMA.</li>
+                </ul>
             </section>
         </aside>
         </body>
